small content changes on the start page

--- a/app/views/recall/start.html
+++ b/app/views/recall/start.html
@@ -5,14 +5,15 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Manage a recall for an offender on licence</h1>
 
-        <p class="govuk-body">This service replaces the Part A report. </p>
-        <p class="govuk-body">Use this service to:</p>
+        <p class="govuk-body">As a community offender manager, use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
             <li>initiate a recall request for an offender on licence</li>
             <li>notify Public Protection Casework Section (PPCS) of the recall request</li>
             <li>track progress of a recall</li>
         </ul>
+        <p class="govuk-body">By using it, you no longer need to fill in the Part A report.</p>
+
 
         <a href="/recall/emergency" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--start" data-module="govuk-button">
             Start now
