comfirmation page and index offence page changes (all content)

--- a/app/views/recall/_side-navigation.html
+++ b/app/views/recall/_side-navigation.html
@@ -13,7 +13,7 @@
             href: '/recall/emergency',
             active: currentPage == 'emergency'
         }, {
-            text: 'Find someone',
+            text: 'Find an offender',
             href: '/recall/search',
             active: currentPage == 'search'
         }, {
@@ -63,5 +63,5 @@
         }]
       }
   ]
-  
+
 }) }}
