--- a/app/views/recall/search.html
+++ b/app/views/recall/search.html
@@ -11,7 +11,7 @@
     </div>
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-          Find someone
+          Find an offender
         </h1>
 
         <form action="" method="get" class="govuk-!-padding-5 govuk-!-margin-bottom-9 search-panel">
