--- a/app/views/recall/vlo.html
+++ b/app/views/recall/vlo.html
@@ -16,7 +16,7 @@
             name: "vlo-contacted",
             fieldset: {
                 legend: {
-                    text: "Have you talked to the VLO?",
+                    text: "Have you talked to the Victim Liaison Officer?",
                     isPageHeading: true,
                     classes: "govuk-fieldset__legend--l"
                 }
