--- a/app/views/recall/index-offence.html
+++ b/app/views/recall/index-offence.html
@@ -53,6 +53,11 @@
             ]
         }) }}
 
+        {{ govukDetails({
+          summaryText: "Check where this data comes from",
+          text: "Index offence details are pulled from NOMIS and nDelius"
+        }) }}
+
         {{ govukTextarea({
             name: "add-index-offence",
             id: "add-index-offence",
