Changes to side bar, small content changes as per research session 2
index offence page brought forward in the flow, just before the reason of breach

added location information as recorded in Delius (needs more design work)

re-ordered routing between pages as per the new side bar order

added explanation boxes to a few selections

--- a/app/views/recall/breach-reason.html
+++ b/app/views/recall/breach-reason.html
@@ -23,7 +23,7 @@
                 }
             },
             hint: {
-                text: "These are the licence conditions agreed on last release, as they are recorded in nDelius. Select any that have been breached."
+                text: "These are the latest version of the licence conditions as recorded in nDelius. Select any that have been breached."
             },
             items: [
                 {
@@ -137,7 +137,16 @@
             items: [
                 {
                     value: "yes",
-                    text: "Yes"
+                    text: "Yes",
+                    conditional: {
+                        html: govukTextarea({
+                            id: "unauthorised-adress",
+                            name: "unauthorised-adress",
+                            label: {
+                                text: "Give more context into this nature of the breach"
+                            }
+                        })
+                    }
                 },
                 {
                     value: "no",
