--- a/app/views/recall/index-offence.html
+++ b/app/views/recall/index-offence.html
@@ -20,7 +20,7 @@
             The details of the index offence are pulled directly from the latest OASys report. You no longer have to write these details.
           </strong>
       </div>
-        <form action="/recall/supervision-response">
+        <form action="/recall/breach-reason">
 
         {{ govukSummaryList({
             rows: [
