--- a/app/views/recall/oasys.html
+++ b/app/views/recall/oasys.html
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">OASys</h1>
         <p class="govuk-body">The most recent OASys assessment for the person in question shows their risk profile as:</p>
-        <form action="/recall/index-offence">
+        <form action="/recall/supervision-response">
 
         {{ govukSummaryList({
             rows: [
