--- a/app/views/recall/search.html
+++ b/app/views/recall/search.html
@@ -76,7 +76,7 @@
               text: "Gender"
             },
             {
-              text: "Ethnicity"
+              text: "Region"
             }
           ],
           rows: [
@@ -106,7 +106,7 @@
                 text: "Male"
               },
               {
-                text: "Asian"
+                text: "Yorkshire & Humber"
               }
             ],
             [
@@ -135,7 +135,7 @@
                 text: "Male"
               },
               {
-                text: "White"
+                text: "South West"
               }
             ],
             [
@@ -164,7 +164,7 @@
                 text: "Male"
               },
               {
-                text: "Black"
+                text: "East Midlands"
               }
             ]
           ]
