--- a/app/views/recall/vlo.html
+++ b/app/views/recall/vlo.html
@@ -30,7 +30,7 @@
                             id: "vlo-contacted-date",
                             name: "vlo-contacted-date",
                             label: {
-                                text: "When"
+                                text: "Add details"
                             }
                         })
                     }
