--- a/app/views/recall/ppcs/case.html
+++ b/app/views/recall/ppcs/case.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">
-            Access Jack Johnson's emergency recall
+            Assess Jack Johnson's emergency recall
         </h1>
         {{ govukAccordion({
         id: "accordion-default",
