RC form built, some of the replacement for H form built
- RC journey under /mh_transfer/responsible-clinician/

- /mh_transfer starts the MHCS screens and the replacement of H forms, but they arent built yet in relation to each other

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,7 +15,8 @@
       </h1>{{releaseVersion | log }}
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/release">Manage a parole review</a></li>
-        <li><a href="/recall">Managing a recall for a previous offender</a></li>
+        <li><a href="/recall">Manage a recall for a previous offender</a></li>
+        <li><a href="/mh_transfer/start">Request mental health treatment for an offender in prison</a></li>
       </ul>
     </div>
   </div>
