--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -3,59 +3,55 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  List of prototypes
+    Managing a recall for a previous offender prototypes
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      {{ govukBackLink({
+        text: "Back",
+        href: "/prototypes"
+      }) }}
       <h1 class="govuk-heading-xl">
         Managing a recall for a previous offender
       </h1>
 
-      <!--<h2 class="govuk-heading-m">
-        Users and their needs
-      </h2>
-      
-      <h3 class="govuk-heading-s">
-        PPCS Caseworkers
-      </h3>
-      {{ govukDetails({
-        summaryText: "Key needs",
-        text: "tbc"
-      }) }}
+        <p class="govuk-body">We decided to focus on...</p>
+
+        <h2 class="govuk-heading-m">
+            Questions we asked
+        </h2>
+        <p class="govuk-body">...</p>
+
+        <h2 class="govuk-heading-m">
+            What we learned
+        </h2>
+        <p class="govuk-body">...</p>
 
 
-      <h3 class="govuk-heading-s">
-        PPCS Team Manager
-      </h3>
-      {{ govukDetails({
-        summaryText: "Key needs",
-        text: "tbc"
-      }) }} -->
-
-      <h2 class="govuk-heading-m">
-        Prototypes
-      </h2>
+        <h2 class="govuk-heading-m">
+            Prototypes we tested
+        </h2>
 
       <div class="moj-timeline">
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Assess emergency recall prototype v1</h2>
+                <h2 class="moj-timeline__title">Assess emergency recall prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-28T00:00:00.000Z">8 September 2020</time>
             </p>
             <div class="moj-timeline__description">
-                <p>Test the process of PPCS accessing an emergency recall</p>
+                <p>Test the process of PPCS assessing an emergency recall</p>
                 <a class="govuk-button" href="/recall/ppcs/todo">View</a>
                 
             </div>
         </div>
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Cosigning prototype v1</h2>
+                <h2 class="moj-timeline__title">Cosigning prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-28T00:00:00.000Z">28 August 2020</time>
@@ -68,7 +64,7 @@
         </div>
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
-                <h2 class="moj-timeline__title">Start a recall prototype v1</h2>
+                <h2 class="moj-timeline__title">Start a recall prototype v1 (HTML)</h2>
             </div>
             <p class="moj-timeline__date">
                 <time datetime="2020-08-28T00:00:00.000Z">28 August 2020</time>
@@ -82,32 +78,6 @@
     </div>
 
   </div>
-  <div class="govuk-grid-column-one-third  govuk-!-margin-top-9">
-        <aside class="app-related-items  govuk-!-margin-top-6" role="complementary">
-            <h2 class="govuk-heading-m" id="subsection-title">
-                More information
-            </h2>
-            <nav role="navigation" aria-labelledby="subsection-title">
-            <ul class="govuk-list govuk-!-font-size-16">
-                <li>
-                    <a href="https://docs.google.com/presentation/d/187Ntq3REWUG-xHBzXh3SH5QNJM9W5pQL3Di1F6Z-l1U/edit?usp=sharing">
-                        Living deck
-                    </a>
-                </li>
-                <li>
-                    <a href="https://docs.google.com/presentation/d/1BQ6-3cPTVTe0kWqFq1D2fllQQQKrni76z6wz73a9Y-M/edit?usp=sharing">
-                        Timelines and research
-                    </a>
-                </li>
-                <li>
-                    <a href="https://drive.google.com/drive/u/0/folders/1IEKCt2GBVo5IHeY8bgIOloYpTf7vtxNq">
-                        Show and tells
-                    </a>
-                </li>
-            </ul>
-            </nav>
-        </aside>
-    </div>
 </div>
 
 {% endblock %}
