Updated this page with final content

--- a/app/views/ppo/index.html
+++ b/app/views/ppo/index.html
@@ -21,15 +21,63 @@
         <p class="govuk-body">We decided to focus on...</p>
 
         <h2 class="govuk-heading-m">
-            Questions we asked
+            What we did
         </h2>
-        <p class="govuk-body">...</p>
+        <p class="govuk-body">PPO’s work around complaints follows this structure:
+        - Understand what the complaint is about
+        - Determine what needs to be investigated to reach a decision, and request that information from the prison
+        - Communicate and explain the decision to the prison and the prisoner
+        - (if applicable) Describe and publish national recommendations
+
+        We designed a simpler flow for them to do these 4 activities on a casework tool. It allows investigators to receive, progress and track an investigation. 
+        They can request and have all the relevant documents in this tool and track how their recommendations are progressing.
+
+        </p>
 
         <h2 class="govuk-heading-m">
+            What we didn’t do
+        </h2>
+        <ul class="govuk-list govuk-list--bullet">
+         <li>We didn’t look much into the admin process as it will remain manual as service users don’t have a way to submit complaints electronically.</li>
+         <li>Measuring impact and performance of the service</li>
+         <li>Auditing an investigation</li>
+         <li>We didn’t look into investigating fatalities</li>
+        </ul>
+
+           <h2 class="govuk-heading-m">
             What we learned
         </h2>
-        <p class="govuk-body">...</p>
-
+        <ul class="govuk-list govuk-list--bullet">
+         <li>Adding checkpoints on each page wasn’t useful, they could easily navigate with the left hand side menu organised by jobs.</li>
+         <li>Document previews worked well and saved time to users</li>
+         <li>All in one place makes the admin tasks way simpler - no need to upload emails, and there’s no risk with forgetting to log things</li>
+         <li>Even though nowadays automatically saving the work might be an obvious feature, participants mentioned a few times of the issues around losing progress in their work because problems with PPUD</li>
+        </ul>
+        
+       <h2 class="govuk-heading-m">
+            Things to explore further
+        </h2>
+        <ul class="govuk-list govuk-list--bullet">
+         <li>More options to request evidence. Currently the prototype gives them automatically a link to request documents. We learned that they might just ask for a clarification or explanation of a policy.
+        They should be able to receive documents or just messages. A way of doing this could be letting them generate a link, or just the person on the other side attaching a document that it’ll appear in their documents section.
+        </li>
+         <li>Users need a way to track their work, they mentioned they use target dates to do this</li>
+         <li>We didn’t test the link to upload documents with prisons. </li>
+         <li>Sometimes they might start with a letter template and realise that what they need to do is a report. They should be able to go back and change what they’re doing, potentially keeping drafts of both.
+        </li>
+            <li>Test with more participants that recommendations can be captured that way and if any other detail might be needed.</li>
+        <li>We didn’t have time to test the page ‘Check progress’. This will allow them to track what recommendations have been done or not.</li>
+        </ul>
+        
+          <h2 class="govuk-heading-m">
+            Things we believe might help PPO in the future:
+        </h2>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>Review and possible redesign of paper forms to enable better information gathering</li>
+         <li>Developing a work script</li>
+         <li>Identifying and redesigning transcription needs</li>
+            <li>Enabling more collaborative working processes</li>
+        </ul>
 
         <h2 class="govuk-heading-m">
             Prototypes we tested
