--- a/app/views/ppo/index.html
+++ b/app/views/ppo/index.html
@@ -18,16 +18,17 @@
             Investigate a complaint
         </h1>
 
-        <p class="govuk-body">We decided to focus on...</p>
-
         <h2 class="govuk-heading-m">
             What we did
         </h2>
         <p class="govuk-body">PPO’s work around complaints follows this structure:
-        - Understand what the complaint is about
-        - Determine what needs to be investigated to reach a decision, and request that information from the prison
-        - Communicate and explain the decision to the prison and the prisoner
-        - (if applicable) Describe and publish national recommendations
+            <ol class="govuk-list govuk-list--number">
+                 <li>Understand what the complaint is about</li>
+                 <li>Determine what needs to be investigated to reach a decision, and request that information from the prison</li>
+                 <li>Communicate and explain the decision to the prison and the prisoner</li>
+                <li>(if applicable) Describe and publish national recommendations</li>
+            </ol>
+
 
         We designed a simpler flow for them to do these 4 activities on a casework tool. It allows investigators to receive, progress and track an investigation. 
         They can request and have all the relevant documents in this tool and track how their recommendations are progressing.
