--- a/app/views/ppo/index.html
+++ b/app/views/ppo/index.html
@@ -21,7 +21,7 @@
         <h2 class="govuk-heading-m">
             What we did
         </h2>
-        <p class="govuk-body">PPO’s work around complaints follows this structure:
+        <p class="govuk-body">PPO’s work around complaints follows this structure:</p>
             <ol class="govuk-list govuk-list--number">
                  <li>Understand what the complaint is about</li>
                  <li>Determine what needs to be investigated to reach a decision, and request that information from the prison</li>
@@ -29,7 +29,7 @@
                 <li>(if applicable) Describe and publish national recommendations</li>
             </ol>
 
-
+        <p class="govuk-body">
         We designed a simpler flow for them to do these 4 activities on a casework tool. It allows investigators to receive, progress and track an investigation. 
         They can request and have all the relevant documents in this tool and track how their recommendations are progressing.
 
