--- a/app/views/ppo/index.html
+++ b/app/views/ppo/index.html
@@ -71,7 +71,7 @@
         </ul>
         
           <h2 class="govuk-heading-m">
-            Things we believe might help PPO in the future:
+            Things we believe might help PPO in the future
         </h2>
         <ul class="govuk-list govuk-list--bullet">
             <li>Review and possible redesign of paper forms to enable better information gathering</li>
