added 'medical assessments'

--- a/app/views/prototypes.html
+++ b/app/views/prototypes.html
@@ -25,6 +25,7 @@
       <h2 class="govuk-heading-l">Mental Health Casework Section</h2>
       <ul class="govuk-list">
         <li><a href="/mh_transfer">Transfer to or from hospital</a></li>
+        <li><a href="/mh_transfer">Make a medical assessment</a></li>
       </ul>
 
       <h2 class="govuk-heading-l">Prisons and Probation Ombudsman</h2>
