Extract out make a medical assessment prototype

--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -3,7 +3,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Transfer to or from hospital prototypes
+    Make a medical assessment prototypes
 {% endblock %}
 
 {% block content %}
@@ -15,7 +15,7 @@
             href: "/prototypes"
         }) }}
         <h1 class="govuk-heading-xl">
-            Transfer to or from hospital
+            Make a medical assessment
         </h1>
 
         <p class="govuk-body">We decided to focus on...</p>
@@ -38,14 +38,14 @@
         <div class="moj-timeline">
             <div class="moj-timeline__item">
                 <div class="moj-timeline__header">
-                    <h2 class="moj-timeline__title">Request mental health treatment for an offender in prison (Google Slides)</h2>
+                    <h2 class="moj-timeline__title">Apply for admitting an offender in prison or custody to hospital for mental health treatment (HTML)</h2>
                 </div>
                 <p class="moj-timeline__date">
-                    <time datetime="2020-08-28T00:00:00.000Z">8 September 2020</time>
+                    <time datetime="2020-08-28T00:00:00.000Z">28 August 2020</time>
                 </p>
                 <div class="moj-timeline__description">
-                    <p></p>
-                    <a class="govuk-button" href="https://docs.google.com/presentation/d/1YPRZcqKmOyQimMlfLqoTWLYE_fTLElhzJxsXv1WIj40/edit?usp=sharing">View</a>
+                    <p>Test the process of a responsible clinician informing MHCS about the need to divert an offender in prison or custody to a hospital for mental health treatment</p>
+                    <a class="govuk-button" href="/mh_transfer/responsible-clinician/start-rc">View</a>
 
                 </div>
             </div>
