--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -18,19 +18,38 @@
             Make a medical assessment
         </h1>
 
-        <p class="govuk-body">We decided to focus on...</p>
 
         <h2 class="govuk-heading-m">
-            Questions we asked
+            What we did
         </h2>
-        <p class="govuk-body">...</p>
+        <p class="govuk-body">To complete a medical assessment for a transfer to a hospital, currently clinicians fill in a form that gets sent to prison. They         find it on Google or some have the template stored in their computers. We designed and tested an online form for a Section 47 to help clinicians with transfers and replace the paper form.
+</p>
 
+        <h2 class="govuk-heading-m">
+            What we didn't do
+        </h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Journey for Section 48</li>
+         <li>Test with the medical team in prisons</li>
+          <li>Journeys for leave</li>
+        </ul>
+        
         <h2 class="govuk-heading-m">
             What we learned
         </h2>
-        <p class="govuk-body">...</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>A digital form will create opportunities to make it easier for clinicians to communicate their assessments and for all parties to know where things are at. It’ll be also beneficial to standardise information.</li>
+         <li>Signature is missing. It’s part of the current form and it’s necessary because it forms the legality of the request.</li>
+        </ul>
 
-
+        <h2 class="govuk-heading-m">
+            To explore further
+        </h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>Adding a way to capture their signature or an equivalent.</li>
+         <li>Review content design of the form so it works for clinicians in hospitals and clinicians in prisons.</li>
+        </ul>
+        
         <h2 class="govuk-heading-m">
             Prototypes we tested
         </h2>
