--- a/app/views/mh_transfer/index.html
+++ b/app/views/mh_transfer/index.html
@@ -38,16 +38,59 @@
         <div class="moj-timeline">
             <div class="moj-timeline__item">
                 <div class="moj-timeline__header">
-                    <h2 class="moj-timeline__title">Request mental health treatment for an offender in prison (Google Slides)</h2>
+                    <h2 class="moj-timeline__title">Request mental health treatment for an offender in prison v2 (PDF)</h2>
                 </div>
                 <p class="moj-timeline__date">
                     <time datetime="2020-08-28T00:00:00.000Z">8 September 2020</time>
                 </p>
                 <div class="moj-timeline__description">
                     <p></p>
-                    <a class="govuk-button" href="https://docs.google.com/presentation/d/1YPRZcqKmOyQimMlfLqoTWLYE_fTLElhzJxsXv1WIj40/edit?usp=sharing">View</a>
-
+                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/mhcs-move-to-hospital-v2.pdf">View</a>
                 </div>
+                <details class="govuk-details govuk-!-margin-bottom-0">
+                    <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                            Main changes
+                        </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                        <table class="govuk-table">
+                            <thead class="govuk-table__head">
+                                <tr class="govuk-table__row">
+                                <th scope="col" class="govuk-table__header">Change</th>
+                                <th scope="col" class="govuk-table__header">Why we made it</th>
+                                </tr>
+                            </thead>
+                            <tbody class="govuk-table__body">
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Task list nein</td>
+                                    <td class="govuk-table__cell">reason</td>
+                                </tr>
+
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">change</td>
+                                    <td class="govuk-table__cell">reason</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+                
+            </div>
+            
+            <div class="moj-timeline__item">
+                <div class="moj-timeline__header">
+                    <h2 class="moj-timeline__title">Request mental health treatment for an offender in prison v1 (PDF)</h2>
+                </div>
+                <p class="moj-timeline__date">
+                    <time datetime="2020-08-28T00:00:00.000Z">8 September 2020</time>
+                </p>
+                <div class="moj-timeline__description">
+                    <p></p>
+                    <a class="govuk-button" href="https://github.com/dxw/moj-ppud-prototypes/blob/main/app/assets/files/pdf-prototypes/mhcs-move-to-hospital-v1.pdf">View</a>
+                </div>
+     
+                
             </div>
         </div>
 
