--- a/app/views/medical_assessment/index.html
+++ b/app/views/medical_assessment/index.html
@@ -54,6 +54,42 @@
         </h2>
 
         <div class="moj-timeline">
+            
+              <div class="moj-timeline__item">
+                <div class="moj-timeline__header">
+                    <h2 class="moj-timeline__title">Changes needed for next iteration</h2>
+                </div>
+                 <details class="govuk-details govuk-!-margin-bottom-0">
+                    <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                            Changes to be made
+                        </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                        <table class="govuk-table">
+                            <thead class="govuk-table__head">
+                                <tr class="govuk-table__row">
+                                <th scope="col" class="govuk-table__header">Change</th>
+                                <th scope="col" class="govuk-table__header">Why we made it</th>
+                                </tr>
+                            </thead>
+                            <tbody class="govuk-table__body">
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Task list nein</td>
+                                    <td class="govuk-table__cell">reason</td>
+                                </tr>
+
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">change</td>
+                                    <td class="govuk-table__cell">reason</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+            </div>
+            
+            
             <div class="moj-timeline__item">
                 <div class="moj-timeline__header">
                     <h2 class="moj-timeline__title">Apply for admitting an offender in prison or custody to hospital for mental health treatment (HTML)</h2>
